# middleware/auth.js
@@ -2,7 +2,7 @@ const auth = (req, res, next) => {
     if (req.isAuthenticated()) {
       return next();
     }
-    res.redirect('/auth/google');
+    res.redirect('/api-docs');
   };
   
   module.exports = auth;
